Shift captions to post_details only, harden uploads/no-cache assets, and extend seeds/schema/tests accordingly